Fix issue with input being too wide and remove predict button

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -162,6 +162,7 @@ main {
 
 #number-of-epochs-input {
     width: 100%;
+    box-sizing: border-box;
     height: 1rem;
 }
 
